...
                            onConfirm(
                                label, 
                                String.format(Locale.getDefault(), "%02d:%02d", hour, minute),
                                eventToEdit?.icon ?: initialIcon
                            )
                        }
                    }, modifier = Modifier.testTag("confirm_add_event")) {
                        Text(if (eventToEdit == null) stringResource(R.string.create) else stringResource(R.string.save))
                    }
                }
            }
        }
    }
...
